Add grid paper PDFs

--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,11 @@
         color: white;
         padding: 16px;
         border-radius: 4px;
-        margin: 16px;
+        margin: 16px 0;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+    @media (max-width: 600px) {
+        body, #content { margin-top: 0; background: white; box-shadow: none; }
     }
   </style>
 </head>
@@ -50,9 +53,9 @@
     <h1>Grid Paper Templates</h1>
     <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
     <ul style="list-style-type: none; padding: 0;">
-      <li><a class="pdf-link" target="_blank" href="">PDF 1</a></li>
-      <li><a class="pdf-link" target="_blank" href="">PDF 2</a></li>
-      <li><a class="pdf-link" target="_blank" href="">PDF 3</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--quarter-inch--dotted.pdf">1/4" Square Grid Paper, dotted lines (PDF)</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20--solid.pdf">20x20 Square Grids (PDF)</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--centimeter--solid.pdf">1 Centimeter Squares, solid lines (PDF)</a></li>
     </ul>
   </div>
 </body>
