Add more grid paper templates

--- a/public/index.html
+++ b/public/index.html
@@ -52,11 +52,30 @@
   <div id="content">
     <h1>Grid Paper Templates</h1>
     <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
+
+    <h3>US Letter Size (8.5x11") Grid Paper</h3>
+    <p>Each of these free printable grid templates are currently only available as PDF.</p>
     <ul style="list-style-type: none; padding: 0;">
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--quarter-inch--dotted.pdf">1/4" Square Grid Paper, dotted lines (PDF)</a></li>
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20--solid.pdf">20x20 Square Grids (PDF)</a></li>
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--centimeter--solid.pdf">1 Centimeter Squares, solid lines (PDF)</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--letter.pdf">20x20 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--dotted-lines--letter.pdf">32x32 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--solid-lines--letter.pdf">32x32 solid lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dashed-lines--letter.pdf">32x64 dashed lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dotted-lines--letter.pdf">32x64 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--solid-lines--letter.pdf">32x64 solid lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--lego--full-page--landscape.pdf">Full page LEGO grid</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/third-party/grid-paper--square--quarter-inch--dotted.pdf">1/4" squares, dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/third-party/grid-paper--square--centimeter--solid.pdf">1 centimeter squares, solid lines</a></li>
     </ul>
+
+    <h3>A4 Size (210x297 mm) Grid Paper</h3>
+    <p>A4 graph paper is currently only available as PDF. Feel free to print and use.</p>
+    <ul style="list-style-type: none; padding: 0;">
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--a4.pdf">20x20 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dashed-lines--a4.pdf">32x64 dashed lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dotted-lines--a4.pdf">32x64 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--solid-lines--a4.pdf">32x64 solid lines</a></li>
+    </ul>
+
   </div>
 </body>
 </html>
