Add support email

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
         margin: 16px 0;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
+    .footer-email {
+        text-align: center
+    }
     @media (max-width: 600px) {
         body, #content { margin-top: 0; background: white; box-shadow: none; }
     }
@@ -53,6 +56,7 @@
     <h1>Grid Paper Templates</h1>
     <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
 
+    <br>
     <h3>US Letter Size (8.5x11") Grid Paper</h3>
     <p>Each of these free printable grid templates are currently only available as PDF.</p>
     <ul style="list-style-type: none; padding: 0;">
@@ -67,14 +71,23 @@
       <li><a class="pdf-link" target="_blank" href="templates/third-party/grid-paper--square--centimeter--solid.pdf">1 centimeter squares, solid lines</a></li>
     </ul>
 
+    <br>
     <h3>A4 Size (210x297 mm) Grid Paper</h3>
-    <p>A4 graph paper is currently only available as PDF. Feel free to print and use.</p>
+    <p>A4 paper is currently only have grids available as PDF. Feel free to print and use.</p>
     <ul style="list-style-type: none; padding: 0;">
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--a4.pdf">20x20 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dashed-lines--a4.pdf">32x64 dashed lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dotted-lines--a4.pdf">32x64 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--solid-lines--a4.pdf">32x64 solid lines</a></li>
     </ul>
+
+    <br>
+    <br>
+    <footer>
+      <p class="footer-email">
+        Please email us if there are more paper templates that you would like to see:<br><a href="mailto:support@gridpapertemplates.com">support@gridpapertemplates.com</a>
+      </p>
+    </footer>
 
   </div>
 </body>
