--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
     .pdf-link {
         display: block;
         text-align: center;
-        background: #039be5;
+        background: #1779ba;
+        /*background: #039be5;*/
         text-transform: uppercase;
         text-decoration: none;
         color: white;
@@ -57,7 +58,7 @@
     <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
 
     <br>
-    <h3>US Letter Size (8.5x11") Grid Paper</h3>
+    <h2>US Letter Size (8.5x11") Grid Paper</h2>
     <p>Each of these free printable grid templates are currently only available as PDF.</p>
     <ul style="list-style-type: none; padding: 0;">
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--letter.pdf">20x20 dotted lines</a></li>
@@ -72,7 +73,7 @@
     </ul>
 
     <br>
-    <h3>A4 Size (210x297 mm) Grid Paper</h3>
+    <h2>A4 Size (210x297 mm) Grid Paper</h2>
     <p>A4 paper is currently only have grids available as PDF. Feel free to print and use.</p>
     <ul style="list-style-type: none; padding: 0;">
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--a4.pdf">20x20 dotted lines</a></li>
