--- a/public/index.html
+++ b/public/index.html
@@ -43,8 +43,6 @@
         margin: 16px 0;
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     }
-    .footer-email {
-    }
     @media (max-width: 600px) {
         body, #content { margin-top: 0; background: white; box-shadow: none; }
     }
@@ -83,7 +81,7 @@
     <br>
     <br>
     <footer>
-      <p class="footer-email">Feel free to email me if there are more paper templates that you would like to see. I'll add it as soon as possible.<br><a href="mailto:support@gridpapertemplates.com">support@gridpapertemplates.com</a></p>
+      <p>Feel free to email me if there are more paper templates that you would like to see. I'll add it as soon as possible.<br><a href="mailto:support@gridpapertemplates.com">support@gridpapertemplates.com</a></p>
       <br>
       <p>Please consider donating to support independent developers:</p>
 
@@ -95,6 +93,9 @@
           <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
         </form>
       </div>
+
+      <br>
+      <div>BTC: 12RBghoXVDCnPTuNn7Ne6XezyFXeM6wYVx</div>
 
     </footer>
 
