Add commented-out code for use of radio buttons

--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,15 @@
     <h1>Grid Paper Templates</h1>
     <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
 
+<!--    Ideas: https://www.sliderrevolution.com/resources/styling-radio-buttons/-->
+<!--    <br>-->
+<!--    <form>-->
+<!--      <h2>Options:</h2>-->
+<!--      <p>Paper Sizes</p>-->
+<!--      <input type="radio" name="paper-size" id="input-us-letter" value="us-letter" checked><label for="input-us-letter">US Letter Size (8.5x11") Grid Paper</label><br>-->
+<!--      <input type="radio" name="paper-size" id="input-a4" value="a4"><label for="input-a4">A4 Size (210x297 mm) Grid Paper</label><br>-->
+<!--    </form>-->
+
     <br>
     <h2>US Letter Size (8.5x11") Grid Paper</h2>
     <p>Each of these free printable grid templates are currently only available as PDF.</p>
