Add more templates and copywriting

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,11 @@
 <body>
   <div id="content">
     <h1>Grid Paper Templates</h1>
-    <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. We have metric and imperial units. More grids coming soon!</p>
+    <p>Your home for all printable grid paper and graph paper templates, including for 2D pixel art and 3D voxel art. More grids coming soon!</p>
+<!--    We have metric and imperial units.-->
+    <p>These templates are also ideal for sketching ideas for pixel art, favicons, and voxel art. 32x32 represents metaverse blocks for Minecraft, The Sandbox, and others. 32x64 grid paper can be used for character design in games.</p>
+
+    <p>You are free to print as much as you want.</p>
 
 <!--    Ideas: https://www.sliderrevolution.com/resources/styling-radio-buttons/-->
 <!--    <br>-->
@@ -64,14 +68,17 @@
 
     <br>
     <h2>US Letter Size (8.5x11") Grid Paper</h2>
-    <p>Each of these free printable grid templates are currently only available as PDF.</p>
+    <p>Each of these free printable grid templates are currently available as PDF.</p>
     <ul style="list-style-type: none; padding: 0;">
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--letter.pdf">20x20 dotted lines</a></li>
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--dotted-lines--letter.pdf">32x32 dotted lines</a></li>
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--solid-lines--letter.pdf">32x32 solid lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--16x16x12--dotted-lines--letter.pdf">16x16 (12) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--letter.pdf">20x20 (6) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x1--dotted-lines--letter.pdf">32x32 (1) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--dotted-lines--letter.pdf">32x32 (4) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x4--solid-lines--letter.pdf">32x32 (4) solid lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dashed-lines--letter.pdf">32x64 dashed lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dotted-lines--letter.pdf">32x64 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--solid-lines--letter.pdf">32x64 solid lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--64x64--dotted-lines--letter.pdf">64x64 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--lego--full-page--landscape.pdf">Full page LEGO grid</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/third-party/grid-paper--square--quarter-inch--dotted.pdf">1/4" squares, dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/third-party/grid-paper--square--centimeter--solid.pdf">1 centimeter squares, solid lines</a></li>
@@ -79,12 +86,15 @@
 
     <br>
     <h2>A4 Size (210x297 mm) Grid Paper</h2>
-    <p>A4 paper is currently only have grids available as PDF. Feel free to print and use.</p>
+    <p>A4 paper currently has grids available as PDF. Feel free to print and use.</p>
     <ul style="list-style-type: none; padding: 0;">
-      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--a4.pdf">20x20 dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--16x16x12--dotted-lines--a4.pdf">16x16 (12) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--20x20x6--dotted-lines--a4.pdf">20x20 (6) dotted lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x32x1--dotted-lines--a4.pdf">32x32 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dashed-lines--a4.pdf">32x64 dashed lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--dotted-lines--a4.pdf">32x64 dotted lines</a></li>
       <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--32x64--solid-lines--a4.pdf">32x64 solid lines</a></li>
+      <li><a class="pdf-link" target="_blank" href="templates/grid-paper--square--64x64--dotted-lines--a4.pdf">64x64 dotted lines</a></li>
     </ul>
 
     <br>
